--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -22,4 +24,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-release-unsigned.apk
-          path: app/build/outputs/apk/release/app-release-unsigned.apk 
+          path: app/build/outputs/apk/release/app-release-unsigned.apk
