--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,17 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: 17
-      - name: Build with Gradle
-        run: ./gradlew build
-      - name: Upload APK
+
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
+
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-unsigned.apk
-          path: app/build/outputs/apk/release/app-release-unsigned.apk
+          name: app-debug.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
