--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'androidx.work:work-runtime-ktx:2.8.1'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
