--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,12 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-android {
-    namespace 'com.example.weibomonitor'
-    compileSdk 33
-
-    defaultConfig {
-        applicationId "com.example.weibomonitor"
-        minSdk 23
-        targetSdk 33
-        versionCode 1
-        versionName "1.0"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
-    }
-    kotlinOptions {
-        jvmTarget = "17"
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.1'
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
-    implementation 'com.squareup.picasso:picasso:2.8'
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
