--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,14 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    plugins {
+        id("com.android.application") version "8.0.2"
+        id("org.jetbrains.kotlin.android") version "1.8.22"
+    }
+}
+
 rootProject.name = "WeiboMonitorApp"
-include ':app' 
+include ':app'
